force-app/main/default/objects/TrainingInvoice__c/TrainingInvoice__c.object-meta.xml
<CustomObject>
    <label>Training Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Training Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>