force-app/main/default/objects/TrainingInvoice__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>