force-app/main/default/objects/TrainingInvoice__c/fields/PaymentId__c.field-meta.xml
<CustomField>
    <fullName>PaymentId__c</fullName>
    <label>Payment Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>