force-app/main/default/objects/TrainingInvoice__c/fields/PaymentLink__c.field-meta.xml
<CustomField>
    <fullName>PaymentLink__c</fullName>
    <label>Payment Link</label>
    <type>Url</type>
</CustomField>