force-app/main/default/objects/TrainingInvoice__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <inlineHelpText>Total isolated tax amount calculated from the total price.</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>