force-app/main/default/objects/TrainingInvoice__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Training Invoices</relationshipLabel>
    <relationshipName>TrainingInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>