force-app/main/default/objects/TrainingInvoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Participant__c</columns>
    <columns>Training__c</columns>
    <columns>Status__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>InvoiceId__c</columns>
    <columns>GrandTotal__c</columns>
    <columns>Tax__c</columns>
    <columns>PaymentDate__c</columns>
    <columns>PaymentId__c</columns>
    <columns>PaymentLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>